samples/modernbank/networking/bankingservices/secure-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: banking-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction
spec:
  hosts:
  - "*"
  gateways:
  - banking-gateway
  http:
  - match:
    - uri:
        prefix: /v1/transaction
    route:
    - destination:
        host: transaction
        port:
          number: 80
  - match:
    - uri:
        prefix: /v1/account
    route:
    - destination:
        host: transaction-log
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
  - "*"
  gateways:
  - banking-gateway
  http:
  - match:
    - uri:
        regex: /v1/users/.*/accounts
    route:
    - destination:
        host: account
        port:
          number: 80
  - match:
    - uri:
        prefix: /v1/users
    route:
    - destination:
        host: user
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
spec:
  hosts:
  - "*"
  gateways:
  - banking-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ui
        port:
          number: 80
